Updated RolesTests for changes to stdout/stderr/exitCodes from bug 1119688 commit df95529a5edd0be456b3528b74344be283c4d258